Fix bottom extra padding

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -405,7 +405,7 @@ h3.no-dark {
 
   background-color: transparent;
   background-position-x: 25%;
-  background-position-y: 90%;
+  background-position-y: 100%;
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-image: url("../img/flower-bot.jpg");
